# AFINES

./: .gitmodules  CMakeLists.txt  README.md  makefile
analysis/: cytomod_functions.m
conda.recipe/: build.sh  meta.yaml
crosslinker_sorting_in_GUVs/: README.txt  aster_initial_condition_grid.py  crosslinker_aster_1_to_1.cfg  crosslinker_aster_3_to_1.cfg
include/: actin_ensemble.h  bead.h  box.h  ext.h  exv.h  filament.h  filament_ensemble.h  generate.h  globals.h  link_ensemble.h  motor.h  motor_ensemble.h  potentials.h  quadrants.h  shear.h  spacer.h  spring.h  thermo.h  vec.h
prog/: network.cpp  pyafines.cpp
python/: output.py
src/: bead.cpp  box.cpp  ext.cpp  exv.cpp  filament.cpp  filament_ensemble.cpp  generate.cpp  globals.cpp  motor.cpp  motor_ensemble.cpp  potentials.cpp  quadrants.cpp  shear.cpp  spacer.cpp  spring.cpp
